Exercise: 4.05: Project v1.9 adding put todo method and updating swager docs
